--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=EmployeeManagement
+spring.datasource.url=jdbc:h2:mem:org;DB_CLOSE_DELAY=-1
+spring.datasource.username=admin
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
+logging.level.org.hibernate.SQL=DEBUG
