--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=EmployeeManagement
 spring.datasource.url=jdbc:h2:mem:org;DB_CLOSE_DELAY=-1
-spring.datasource.username=admin
+spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
